Time: 2 ms (44%), Space: 44.3 MB (83.73%) - LeetHub